trino/kubernetes/trino-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: trino
  name: trino
  namespace: trino-ranger
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: trino
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/trino-ranger-demo: "true"
        io.kompose.service: trino
    spec:
      containers:
        - image: guestros/trino:latest
          name: my-localhost-trino
          ports:
            - containerPort: 8080
          resources: {}
      hostname: my-localhost-trino
      restartPolicy: Always
status: {}
