trino/kubernetes/trino-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  namespace: trino-ranger
  labels:
    io.kompose.service: trino
  name: trino
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8080
  selector:
    io.kompose.service: trino
status:
  loadBalancer: {}
